SimpleWeather: WinUI update
* Replace some controls with WinUI equivalent
* Update UI to match WinUI 2.6 style

--- a/SimpleWeather.UWP/Controls/DetailItem.xaml
+++ b/SimpleWeather.UWP/Controls/DetailItem.xaml
@@ -37,7 +37,7 @@
         Background="#B3FFFFFF"
         BorderBrush="#40D3D3D3"
         BorderThickness="1"
-        CornerRadius="2">
+        CornerRadius="{ThemeResource ControlCornerRadius}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
