--- a/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
@@ -10,6 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    d:Background="{ThemeResource RegionBrush}"
     DataContext="{x:Bind Forecasts, Mode=OneWay}"
     mc:Ignorable="d">
 
@@ -72,22 +73,20 @@
         </Style>
     </Page.Resources>
 
-    <Grid Background="{ThemeResource RegionBrush}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Border
-            Grid.Row="0"
-            BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}"
-            BorderThickness="0,0,0,0.5">
+        <StackPanel Grid.Row="0">
             <Viewbox Height="48" HorizontalAlignment="Left">
                 <TextBlock
                     Padding="16"
                     FontSize="16"
                     Text="{x:Bind WeatherView.Location, Mode=OneWay, FallbackValue='New York, NY'}" />
             </Viewbox>
-        </Border>
+            <Rectangle Height="1" Fill="{ThemeResource NavigationViewContentGridBorderBrush}" />
+        </StackPanel>
         <ListView
             x:Name="ListControl"
             Grid.Row="1"
@@ -105,12 +104,7 @@
             ShowsScrollingPlaceholders="True">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border
-                        Background="{ThemeResource ToggleButtonBackgroundThemeBrush}"
-                        BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}"
-                        BorderThickness="0,0,0,0.5">
-                        <localcontrols:WeatherDetailPanel x:Name="DetailItem" />
-                    </Border>
+                    <localcontrols:WeatherDetailPanel x:Name="DetailItem" />
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
@@ -124,7 +118,7 @@
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
-        <ProgressRing
+        <muxc:ProgressRing
             Grid.Row="1"
             Width="50"
             Height="50"
