--- a/SimpleWeather.UWP/Main/WeatherChartsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherChartsPage.xaml
@@ -9,24 +9,23 @@
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    d:Background="{ThemeResource RegionBrush}"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource RegionBrush}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Border
-            Grid.Row="0"
-            BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}"
-            BorderThickness="0,0,0,0.5">
+        <StackPanel Grid.Row="0">
             <Viewbox Height="48" HorizontalAlignment="Left">
                 <TextBlock
                     Padding="16"
                     FontSize="16"
                     Text="{x:Bind WeatherView.Location, Mode=OneWay, FallbackValue='New York, NY'}" />
             </Viewbox>
-        </Border>
+            <Rectangle Height="1" Fill="{ThemeResource NavigationViewContentGridBorderBrush}" />
+        </StackPanel>
         <ListView
             x:Name="GraphContainer"
             Grid.Row="1"
