--- a/SimpleWeather.UWP/Setup/SetupLocationsPage.xaml
+++ b/SimpleWeather.UWP/Setup/SetupLocationsPage.xaml
@@ -10,7 +10,7 @@
     xmlns:local="using:SimpleWeather.UWP.Setup"
     xmlns:localControls="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -493,7 +493,7 @@
                         </StackPanel>
                     </Button.Content>
                 </Button>
-                <ProgressRing
+                <muxc:ProgressRing
                     Name="LoadingRing"
                     Grid.Row="2"
                     Width="35"
