--- a/SimpleWeather.UWP/Themes/Generic.xaml
+++ b/SimpleWeather.UWP/Themes/Generic.xaml
@@ -4,8 +4,12 @@
     xmlns:contract6Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,6)"
     xmlns:contract7NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,7)"
     xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:localControls="using:SimpleWeather.UWP.Controls"
-    xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives"
+    mc:Ignorable="d">
 
     <Style TargetType="localControls:BottomNavigationBar">
         <Setter Property="Background" Value="{ThemeResource SystemAccentColor}" />
@@ -625,9 +629,10 @@
                             UpdateTextOnSelect="False">
                             <!--  HAXX Workaround  -->
                             <AutoSuggestBox.Tag>
-                                <ProgressRing
+                                <muxc:ProgressRing
                                     x:Name="LoadingRing"
                                     Margin="10,0,12,0"
+                                    d:Visibility="Visible"
                                     Foreground="{ThemeResource SystemControlForegroundAccentBrush}"
                                     IsActive="False"
                                     Visibility="{Binding ElementName=LoadingRing, Path=IsActive, Mode=OneWay, FallbackValue='Collapsed'}" />
